[metadata]
name = ferrypick
version = 0.1.dev1
description = Apply patches from Fedora dist git to different components.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fedora-python/ferrypick
keywords = fedora, git
license = CC0
python_requires = '>=3.8'
packages = find:
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Version Control :: Git

[options.entry_points]
console_scripts =
    ferrypick = ferrypick:main

[options]
zip_safe = False
